--- a/_locales/da/translations.json
+++ b/_locales/da/translations.json
@@ -27,14 +27,14 @@
 	"Good afternoon": "God eftermiddag",
 	"Good evening": "Godaften",
 	"Good night": "God nat",
-	"Sweet dreams": "Søde drømme",
+	"Sweet dreams": "Sov godt",
 	"It is currently": "Det er lige nu",
 	"It currently feels like": "Lige nu føles det som",
 	"feels like": "føles som",
 	"with a high of": "med op til",
 	"today": "i dag",
 	"tomorrow": "i morgen",
-	"Default page": "Standard side",
+	"Default page": "Standardside",
 	"Folder": "Mappe",
 	"Page": "Side",
 	"on Unsplash": "på Unsplash",
@@ -93,10 +93,10 @@
 	"Type the collection ID from its URL, add more by separating them with a comma.": "Skriv samlingsid'et fra dens URL, tilføj flere ved at adskille dem med komma.",
 	"Blur intensity": "Sløringsintensitet",
 	"Brightness": "Lysstyrke",
-	"Quick Links": "Hurtig links",
+	"Quick Links": "Genveje",
 	"These are Bonjourr's bookmarks. ": "De her er Bonjourrs bogmærker. ",
-	"Edit your Quick Links by right clicking the icon.": "Rediger dine Hurtig Links ved at højreklikke på ikonet.",
-	"Edit your Quick Links by long-pressing the icon.": "Rediger dine Hurtig Links ved at trykke længe på ikonet.",
+	"Edit your Quick Links by right clicking the icon.": "Rediger dine genveje ved at højreklikke på ikonet.",
+	"Edit your Quick Links by long-pressing the icon.": "Rediger dine genveje ved at trykke længe på ikonet.",
 	"Learn more": "Lær mere",
 	"Add link": "Tilføj link",
 	"Import bookmarks": "Importer bogmærker",
